testsuite/tests/polykinds/T14172.stderr
T14172.hs:7:46: error: [GHC-88464]
    • Found type wildcard ‘_’ standing for ‘a'1 :: k30’
      Where: ‘k30’ is an ambiguous type variable
             ‘a'1’ is an ambiguous type variable
      To use the inferred type, enable PartialTypeSignatures
    • In the first argument of ‘h’, namely ‘_’
      In the first argument of ‘f’, namely ‘(h _)’
      In the type signature:
        traverseCompose :: (a -> f b) -> g a -> f (h _)

T14172.hs:8:19: error: [GHC-25897]
    • Couldn't match type ‘h’ with ‘Compose f'0 g'0’
         arising from a use of ‘_Wrapping’
       ‘h’ is a rigid type variable bound by
        the inferred type of
          traverseCompose :: (a -> f b) -> g a -> f (h a'1)
        at T14172.hs:7:1-47
    • In the first argument of ‘(.)’, namely ‘_Wrapping Compose’
      In the expression: _Wrapping Compose . traverse
      In an equation for ‘traverseCompose’:
          traverseCompose = _Wrapping Compose . traverse
    • Relevant bindings include
        traverseCompose :: (a -> f b) -> g a -> f (h a'1)
          (bound at T14172.hs:8:1)

